--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             </div>
             <div class="content">
                 <h2 id="welcome" class="engl">Welcome  <br> Ameen <span class="engl" style="color: #F57C00; padding-left: 0;"> <br>Alyousfi</span> </h2>
-                <h2 id="welcome" class="arab">مرحبا بكم<br>  <span class="arab" style="color: #F57C00;">  أمـــين  </span>   اليــوسفي  </h2>
+                <h2 id="welcome" class="arab">مرحبا بكم<br>  <span class="arab" style="color: #F57C00;padding-right: 10px;">  أمـــين  </span>   اليــوسفي  </h2>
                 <p class="engl" id="prag-welcome">where ideas turn into unique creations!<br>
                   Discover our services and start with us towards your success.
               </p>
